--- a/others/paper/articulo.tex
+++ b/others/paper/articulo.tex
@@ -186,7 +186,15 @@ breaklines=true
 
 \vspace{-3mm} \hspace{.05in}\parbox{4.5in} {{\small %\footnotesize 
 
-AL FINALIZAR
+En el presente informe se da a conocer de manera detallada el diseño, desarrollo e implementación de 
+una arquitectura de navegación híbrida basada en la arquitectura AuRA para el robot Pionner P3DX, 
+con el objetivo de planificar rutas entre dos puntos cualesquiera 
+en un ambiente conocido.
+Para ello se usó el Algoritmo de Dijkstra como método para la determinación del camino más corto de un punto a otro.
+Por otra parte, se segmentó el mapa con la Triangulación de Delaunay, para poder usar el diagrama de Voronoi asociado.
+Además, se explica el funcionamiento e instalación de la aplicación de software 
+desarrollada. Se exponen los resultados y conclusiones del conjunto de pruebas 
+realizadas para validar la arquitectura.
 
  \textbf{Palabras clave}: Robótica, ARIA, AuRA, Arquitectura Híbrida, Pioneer P3DX.}}
 \end{center}
@@ -209,7 +217,15 @@ AL FINALIZAR
 
 \section*{Introducción}
 
-AL FINALIZAR
+La robótica móvil es un campo de investigación que supone la integración de numerosas disciplinas
+entre las que se encuentran la electrónica, ingeniería mecánica,
+inteligencia artificial, estadística, entre otros. Tiene como objetivo 
+construir una ruta de navegación sobre un entorno conocido o desconocido,
+a través de un sistema que integra la percepción del entorno mediante
+sensores, toma de decisiones y acciones.
+
+La arquitectura AuRA propone un enfoque donde se fusiona los paradigmas deliberativo y reactivo,
+lo que le permite al robot responder a eventos inesperados y a la vez cumplir con los objetivos de la misión.
 
 \section*{Pioneer P3DX}
 
