--- a/others/paper/articulo.tex
+++ b/others/paper/articulo.tex
@@ -333,7 +333,7 @@ y compilación de aplicaciones.
 \section*{Configuración del Entorno}
 
 Antes de configurar el entorno de desarrollo es necesario descargar el código fuente del proyecto,
-este está disponible al público con licencia de software \textbf{GPL} en la siguiente dirección:
+este está disponible al público con licencia de software \textbf{MIT} en la siguiente dirección:
 \\ \link{https://bitbucket.org/sauljabin/ariajava-p3dx}.
 
 \subsubsection*{Requisitos}
@@ -353,7 +353,7 @@ este está disponible al público con licencia de software \textbf{GPL} en la si
 \sourcecode{AriaVC10.dll} a  \sourcecode{Aria.dll}.
 \item Importar proyecto a eclipse.
 \item Agregar al \sourcecode{Java Build Path} el wrapper Java de ARIA que se encuentra en la ruta: \\ \sourcecode{C:\textbackslash Program Files\textbackslash MobileRobots\textbackslash ARIA\textbackslash java\textbackslash Aria.jar}.
-\item Verificar que la variable  \sourcecode{PATH\_LIBARIA} del archivo  \sourcecode{CONFIG.properties} 
+\item Verificar que la variable  \sourcecode{PATH\_LIBARIA} del archivo  \sourcecode{CONFIG.props} 
 	  sea igual a:  \sourcecode{C\textbackslash:\textbackslash\textbackslash Program Files\textbackslash\textbackslash MobileRobots\textbackslash\textbackslash ARIA\textbackslash\textbackslash bin\textbackslash\textbackslash }.
 \end{enumerate}
 
@@ -375,7 +375,7 @@ este está disponible al público con licencia de software \textbf{GPL} en la si
 \\ \# ldconfig}
 \item Importar proyecto a eclipse.
 \item Agregar al \sourcecode{Java Build Path} el wrapper Java de ARIA que se encuentra en la ruta: \sourcecode{/usr/local/Aria/java/Aria.jar}
-\item Verificar que la variable \sourcecode{PATH\_LIBARIA} del archivo \sourcecode{CONFIG.properties} 
+\item Verificar que la variable \sourcecode{PATH\_LIBARIA} del archivo \sourcecode{CONFIG.props} 
 	  sea igual a: \sourcecode{/usr/local/Aria/lib/}
 \end{enumerate}
 
