--- a/others/paper/articulo.tex
+++ b/others/paper/articulo.tex
@@ -188,11 +188,10 @@ breaklines=true
 
 En el presente informe se da a conocer de manera detallada el diseño, desarrollo e implementación de 
 una arquitectura de navegación híbrida basada en la arquitectura AuRA para el robot Pionner P3DX, 
-con el objetivo de planificar rutas entre dos puntos cualesquiera 
-en un ambiente conocido.
-Para ello se usó el Algoritmo de Dijkstra como método para la determinación del camino más corto de un punto a otro.
-Por otra parte, se segmentó el mapa con la Triangulación de Delaunay, para poder usar el diagrama de Voronoi asociado.
-Además, se explica el funcionamiento e instalación de la aplicación de software 
+con el objetivo de planificar rutas entre dos puntos cualesquiera en un ambiente conocido.
+La arquitectura construye el camino más corto aplicando el Algoritmo de Dijkstra sobre el diagrama de Voronoi asociado
+al entorno. Se segmentó el mapa con la Triangulación de Delaunay para generar dicho diagrama.
+Por otra parte, se explica el funcionamiento e instalación de la aplicación de software 
 desarrollada. Se exponen los resultados y conclusiones del conjunto de pruebas 
 realizadas para validar la arquitectura.
 
@@ -443,11 +442,46 @@ La \reffigure{fig:map} muestra el resultado del archivo \textit{.map} descrito e
 
 \subsubsection*{\textit{Razonador Espacial}}
 
+
 \subsubsection*{\textit{Secuenciador del Plan}}
 
 \subsection*{Capa Reactiva}
 
 \section*{Herramienta de Software Desarrollada}
+
+%\begin{figure}[here]
+%\begin{center}
+%\includegraphics[width=6cm]{ventana-principal.png} 
+%\caption{Ventana principal.}
+%\label{fig:ventana-principal}
+%\end{center}
+%\end{figure} 
+
+\subsubsection*{\textit{Menu Opciones}}
+
+\begin{figure}[here]
+\begin{center}
+\includegraphics[width=3cm]{menu-opciones2.png} 
+\caption{Menu opciones.}
+\label{fig:menu-opciones}
+\end{center}
+\end{figure} 
+
+\begin{figure}[here]
+\begin{center}
+\includegraphics[width=6cm]{cargar-mapa.png} 
+\caption{Ventana para seleccionar mapa.}
+\label{fig:cargar-mapa}
+\end{center}
+\end{figure} 
+
+\begin{figure}[here]
+\begin{center}
+\includegraphics[width=6cm]{ver-configuracion.png} 
+\caption{Ventana para ver los atributos de configuración.}
+\label{fig:ver-configuracion}
+\end{center}
+\end{figure} 
 
 \section*{Experimentación}
 
