--- a/others/paper/articulo.tex
+++ b/others/paper/articulo.tex
@@ -391,7 +391,7 @@ Como se observa en la \reffigure{fig:planificador} se puede ingresar la posició
 
 \begin{figure}[here]
 \begin{center}
-\includegraphics[width=6cm]{ventana-principal.png} 
+\includegraphics[width=10cm]{ventana-principal.png} 
 \caption{Planificador de misión.}
 \label{fig:planificador}
 \end{center}
@@ -451,23 +451,51 @@ La \reffigure{fig:map} muestra el resultado del archivo \textit{.map} descrito e
 \pagebreak
 \section*{Herramienta de Software Desarrollada}
 
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=6cm]{ventana-principal.png} 
-\caption{Ventana principal.}
-\label{fig:ventana-principal}
-\end{center}
-\end{figure} 
+Se desarrolló una herramienta computacional llamada \textbf{AriaJavaP3DX}, que provee los elementos gráficos necesarios para 
+configurar y monitorear el comportamiento del robot Pioneer P3DX.
+Como se muestra en las Figuras \ref{fig:ventana-principal-partes} y \ref{fig:ventana-principal-conexion}, la ventana principal está compuesta por 7 elementos:
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=6cm]{ventana-principal-partes.png} 
+\includegraphics[width=10cm]{ventana-principal-partes.png} 
 \caption{Partes de la ventana principal.}
 \label{fig:ventana-principal-partes}
 \end{center}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=10cm]{ventana-principal-conexion-partes.png} 
+\caption{Partes de la ventana principal.}
+\label{fig:ventana-principal-conexion}
+\end{center}
+\end{figure} 
+
+\begin{enumerate}
+\item En la sección \textbf{Animación} de la pestaña \textbf{Calibración}, se puede configurar la animación 
+a través de los siguientes items: \textbf{FPS}, cuadros por segundo (en ingles \comillas{Frames per second}), 
+se refiere a la frecuencia en que se actualiza la imagen de la animación. \textbf{Proporción}, es la proporción del mapa en 
+la animación con respecto a la medida original en milímetros. \textbf{Trazo}, es el grosor del trazado de las imágenes en la 
+animación. \textbf{Refresh}, es la frecuencia en segundos en que se verifica la posición real del robot y se actualiza la 
+posición del robot animado.
+\item La sección \textbf{Robot}, permite asigna la velocidad máxima, las posiciones inicial y final del robot. 
+\item En la parte inferior de la ventana se encuentra la consola, permite observar los mensajes que se generan en la ejecución
+de la aplicación.
+\item En el lateral derecho de la ventana se encuentran una serie de botones que permiten manipular el mapa.
+ En primer lugar 
+se puede hacer zoom sobre el mapa \refpfigure{subfig:botones-zoom}. Además se puede mover la ubicación del mapa hacia los 4 puntos 
+cardinales \refpfigure{subfig:botones-mover-mapa}. Por otra parte, se puede centrar el mapa \refpfigure{subfig:botones-centrar-capturar} y hacer una captura de imagen, al presionar el botón de captura de imagen (ícono camara fotográfica) se
+muestra la ventana de guardar imagen \refpfigure{fig:guardar-imagen}. Los últimos botones \refpfigure{subfig:botones-ocultar-mapa} permiten mostrar u ocultar
+la ruta óptima calculada y activar o desactivar el antialiasing.
+\item En la región central de la ventana se observa el canvas donde se genera la animación, 
+como se puede observar en la \reffigure{fig:mapa-cargado}. 
+\item En la pestaña \textbf{Conexión} se puede establecer la arquitectura de control del robot.
+En el item \textbf{Arquitectura}, se puede seleccionar entre un comportamiento solamente reactivo
+o la arquitectura AuRA.
+\item Esta última sección permite establecer la dirección IP y el puerto de conexión con el robot.
+\end{enumerate} 
+
+\begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.2\linewidth}
         		\centering
@@ -496,7 +524,7 @@ La \reffigure{fig:map} muestra el resultado del archivo \textit{.map} descrito e
                 \caption{Ocultar}
                 \label{subfig:botones-ocultar-mapa}
         \end{subfigure}
-        \caption{Acciones para manipulación del mapa}
+        \caption{Acciones para manipulación del mapa.}
         \label{fig:botones-mapa}
 \end{figure}
 
@@ -510,27 +538,23 @@ La \reffigure{fig:map} muestra el resultado del archivo \textit{.map} descrito e
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=6cm]{ventana-principal-conexion.png} 
-\caption{Ventana principal conexión.}
-\label{fig:ventana-principal-conexion}
-\end{center}
-\end{figure} 
-
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=6cm]{mapa-cargado.png} 
+\includegraphics[width=10cm]{mapa-cargado.png} 
 \caption{Mapa cargado.}
 \label{fig:mapa-cargado}
 \end{center}
 \end{figure} 
 
 \pagebreak
-\subsubsection*{\textit{Menu Opciones}}
+\subsubsection*{\textit{Menú Opciones}}
+
+A través de este menú \refpfigure{fig:menu-opciones} se puede seleccionar y cargar un mapa ingresando 
+a la opción \textbf{Cargar Mapa}, esta, desplegará una ventana de búsqueda \refpfigure{fig:cargar-mapa}.
+La opción \textbf{Ver configuración} permite visualizar la lista de valores de la configuración general de la aplicación \refpfigure{fig:ver-configuracion}. Por último la opción cerrar permite terminar la aplicación.
 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=3cm]{menu-opciones2.png} 
-\caption{Menu opciones.}
+\caption{Menú opciones.}
 \label{fig:menu-opciones}
 \end{center}
 \end{figure} 
@@ -551,8 +575,10 @@ La \reffigure{fig:map} muestra el resultado del archivo \textit{.map} descrito e
 \end{center}
 \end{figure} 
 
-\pagebreak
-\subsubsection*{\textit{Menu Ayuda}}
+\subsubsection*{\textit{Menú Ayuda}}
+
+A través del menu ayuda \refpfigure{fig:menu-ayuda} se puede acceder a la documentación de 
+la aplicación, además se puede ingresar a la ventana de creditos en la opción \textbf{Sobre AriaJavaP3DX} \refpfigure{fig:ventana-about}.
 
 \begin{figure}[H]
 \begin{center}
